@@ -4,8 +4,8 @@
 \title{Discover differentially abundant time intervals}
 \usage{
 fitTimeSeries(obj, feature, class, time, id, method = c("ssanova"),
-  lvl = NULL, C = 0, B = 1000, seed = 123, norm = TRUE, log = TRUE,
-  sl = 1000, ...)
+  lvl = NULL, C = 0, B = 1000, norm = TRUE, log = TRUE, sl = 1000,
+  ...)
 }
 \arguments{
 \item{obj}{metagenomeSeq MRexperiment-class object.}
@@ -25,8 +25,6 @@ fitTimeSeries(obj, feature, class, time, id, method = c("ssanova"),
 \item{C}{Value for which difference function has to be larger or smaller than (default 0).}
 
 \item{B}{Number of permutations to perform}
-
-\item{seed}{Random-number seed.}
 
 \item{norm}{When aggregating counts to normalize or not.}
 
