@@ -1,0 +1,40 @@
+@BOOK{Wahba:1990,
+  AUTHOR =       {G. Wahba},
+  TITLE =        {Spline Models in Statistics},
+  SERIES =       {CBMS-NSF Regional Conference Series},
+  PUBLISHER =    {SIAM},
+  ADDRESS =      {Philadelphia, PA},
+  YEAR =         {1990}
+}
+@ARTICLE{longcrisp,
+  author =       {H. Jaroslaw and N. Elena and M.L. Nan},
+  title =        {LongCriSP: A test for Bumphunting in Longitudinal data},
+  journal =      {Statistics in Medicine},
+  year =         {2006},
+  volume =       {26},
+  pages =        {1383--1397}
+}
+@article{bumphunter,
+  title={Bump hunting to identify differentially methylated regions in epigenetic epidemiology studies},
+  author={Jaffe, Andrew E and Murakami, Peter and Lee, Hwajin and Leek, Jeffrey T and Fallin, M Daniele and Feinberg, Andrew P and Irizarry, Rafael A},
+  journal={International journal of epidemiology},
+  volume={41},
+  number={1},
+  pages={200--209},
+  year={2012},
+  publisher={IEA}
+}
+@book{networkped1,
+  title={Graph-based data analysis: tree-structured covariance estimation, prediction by regularized kernel estimation and aggregate database query processing for probabilistic inference},
+  author={Bravo, H{\'e}ctor Corrada},
+  year={2008},
+  publisher={ProQuest}
+}
+@BOOK{Gu,
+  author =       {C. Gu},
+  title =        {Smoothing Spline Anova Model},
+  series =       {Springer Series in Statistics},
+  publisher =    {Springer},
+  year =         {2002}
+}
+@article{ts_mouse, title={The effect of diet on the human gut microbiome: a metagenomic analysis in humanized gnotobiotic mice.}, volume={1}, number={6}, journal={Science translational medicine}, publisher={NIH Public Access}, author={Turnbaugh, Peter J and Ridaura, Vanessa K and Faith, Jeremiah J and Rey, Federico E and Knight, Rob and Gordon, Jeffrey I}, year={2009}, pages={6ra14}}
